# todo-rust

./: .gitconfig  Cargo.toml
src/: db.rs  main.rs
src/todo/: mod.rs
static/: index.html  swagg.css  todo.html
