[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
leptos = { version = "0.4.9", features = ["ssr"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"]}
anyhow = "1.0"
